sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value ecart
	ecart=getNombreValeurs()
        ^AlgCombSort:4: error: not found: value ecart
	if (ecart>1)
            ^AlgCombSort:5: error: not found: value ecart
		{ecart = (ecart.toDouble / 1.3).toInt}
                 ^AlgCombSort:6: error: not found: value i
	i = 0	
        ^AlgCombSort:7: error: not found: value i
	while (i+ecart<getNombreValeurs()) {
               ^AlgCombSort:8: error: not found: value i
		if (plusPetit(i:Int, i+ecart:Int)==false) {
                              ^AlgCombSort:9: error: not found: value i
				echange(i:Int, i+ecart:Int)
                                        ^AlgCombSort:10: error: not found: value i
				i=i+1
                                ^